--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<p>What to do:</p>
 		<ol>
 			<li>visit the Old Town and have some bussin nuts</li>
-			<li>visit <a href=”https://taltech.ee/”>TalTech</a></li>
+			<li>visit <a href="https://taltech.ee/">TalTech</a></li>
 			<li>freeze your guts</li>
 		</ol>
 		<table>
